yay - builds like expected
