# swagger/swagger.yaml
@@ -5,6 +5,37 @@ components:
     requestBodies: {}
     responses: {}
     schemas:
+        Pick_User.Exclude_keyofUser.%22foo%22__:
+            properties:
+                id:
+                    type: string
+                prop1:
+                    type: string
+                prop2:
+                    type: string
+                bar:
+                    type: string
+                bazz:
+                    type: string
+            required:
+                - id
+                - prop1
+                - prop2
+                - bar
+                - bazz
+            type: object
+            description: 'From T, pick a set of properties whose keys are in the union K'
+        Omit_User.%22foo%22_:
+            $ref: '#/components/schemas/Pick_User.Exclude_keyofUser.%22foo%22__'
+            description: 'Construct a type with the properties of T except for those in type K.'
+        OmissionUser:
+            properties:
+                user:
+                    $ref: '#/components/schemas/Omit_User.%22foo%22_'
+            required:
+                - user
+            type: object
+            additionalProperties: true
         User:
             properties:
                 id:
@@ -26,14 +57,6 @@ components:
                 - foo
                 - bar
                 - bazz
-            type: object
-            additionalProperties: true
-        OmissionUser:
-            properties:
-                user:
-                    $ref: '#/components/schemas/User'
-            required:
-                - user
             type: object
             additionalProperties: true
     securitySchemes: {}
